# FICT

./: .gitignore  README.md
2term/OP/lab4/C++/: CMakeLists.txt
2term/OP/lab4/C++/src/: main.cpp
2term/programming_fundamentals/lab2/C++/: CMakeLists.txt
2term/programming_fundamentals/lab2/C++/src/: main.cpp
3term/algorithm_design/lab1/: util.h
3term/algorithm_design/lab2/: README.md
3term/algorithm_design/lab3/: index.html  package.json  pnpm-lock.yaml
3term/algorithm_design/lab4/: README.md  graph.go  main.go
3term/algorithm_design/lab5/: bees_algo.go  constants.go  helpers.go
3term/algos/lab1/: README.md  filegen.bin.py  filegen.py  poac.toml
3term/algos/lab2/: nq.ids.py
3term/algos/lab3/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.ts
3term/algos/lab4/: bees_algo.go  constants.go  graph.go  helpers.go  main.go  section.go
3term/algos/lab5/: README.md  bees_algo.go  graph.go  section.go
3term/db/lab2/: lab2.mwb  lab2raw.mwb
3term/web-tech/lab4/: index.html
3term/web-tech/lab5/: index.html
3term/web-tech/lab6/: index.html  package.json  pnpm-lock.yaml
3term/web-tech/lab7/: index.html
3term/web_tech/lab5/: index.html
3term/web_tech/lab6/: index.html  package.json
4term/assembly/lab1/: lab1.asm
4term/assembly/lab2/: lab2.asm
4term/nodejs/: jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
8term/network_programming/lab3/: .clang-format  CMakeLists.txt
8term/network_programming/lab3/client/: client.c
8term/network_programming/lab3/common/: print_addr.c  print_addr.h  status.h
8term/network_programming/lab3/data/: 8kb.txt
8term/network_programming/lab3/example/: client.c  server.c  server_fork.c  server_prefork.c
8term/network_programming/lab3/server/: server.c  server_fork.c  server_prefork.c
8term/network_programming/lab4/: .clang-format  CMakeLists.txt
8term/network_programming/lab4/client/: main.c
8term/network_programming/lab4/data/: 2kb.txt  4kb.txt
8term/network_programming/lab4/example/: server.c
8term/network_programming/lab4/server/: main.c
OP/lab2/: CMakeLists.txt
OP/lab2/C++/: main.cpp
OP/lab2/C++/headers/: MaterialPoint.h  generate_value.h  print_points_in_first_octant.h  show_coords_table.h  utils.h  verify_first_octant.h
OP/lab2/C++/src/: main.cpp  main1.cpp  parse_csv_data.h
OP/lab2/C++/src/headers/: cin_input_into_file.h  date_to_years.h  parse_file_data.h  print_results.h  read_write_data.h  remove_less_than_year.h  struct.h  workers_list_conditionally.h
OP/lab2/Python/: main.py
OP/lab2/Python/modules/: MaterialPoint.py  input_into_file.py  print_points_in_first_octant.py  show_coords_table.py  verify_first_octant.py
OP/lab2/assets/: companyData.csv  company_data.csv
OP/lab2/headers/: generate_value.h  verify_first_octant.h
OP/lab2/src/: MaterialPoint.cpp  main.cpp
(+749 files in other folders)
